<resources>
    <string name="app_name">CameraAdvancedApp</string>
    <string name="action_settings">Settings</string>
    <string name="FILE_TAG">file to save</string>
    <string name="CAMERA_PREFERENCES">cameraID</string>
    <string name="LOG_TAG">camera2_advanced_app</string>
    <string name="CAMERA2_APP_FOLDER">camera2 advanced app</string>
    <string name="SCREEN_ROTATION_TAG">screen rotation</string>
    <string name="PHOTO_COUNT">photo count</string>
    <string name="raw_text">RAW</string>
    <string name="jpeg_text">JPEG</string>
    <string name="format_text">Choose output format</string>
    <string name="effects_text">Choose effect</string>
    <string name="effect_sepia">Sepia</string>
    <string name="effect_blackboard">Mono</string>
    <string name="FORMAT_TAG">format</string>
    <string name="EFFECT_TAG">effect</string>
    <integer name="RADIO_RAW">0</integer>
    <integer name="RADIO_JPEG">1</integer>
    <integer name="RADIO_SEPIA">2</integer>
    <integer name="RADIO_BLACKBOARD">1</integer>
    <string name="START_TEXT">Take photos</string>
    <string name="photo_button">Take picture</string>
    <string name="no_effect">No Effect</string>
</resources>
