<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.brugnolo.cameraapp.settingsActivity">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:id="@+id/formatLinear">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/format_text"
            android:layout_gravity="center_vertical"
            android:layout_weight="1" />

        <RadioGroup
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:id="@+id/formatGroup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/raw_text"
                android:id="@+id/RawRadio" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/jpeg_text"
                android:id="@+id/JPEGRadio" />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/formatLinear"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_alignParentStart="true">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/effects_text"
            android:layout_gravity="center_vertical"
            android:layout_weight="1" />

        <RadioGroup
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:id="@+id/effectsGroup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/effect_sepia"
                android:id="@+id/sepiaEffect" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/effect_blackboard"
                android:id="@+id/blackboardEffect" />
        </RadioGroup>
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/START_TEXT"
        android:onClick="startCamera"
        android:id="@+id/button"
        android:layout_alignParentBottom="false"
        android:layout_centerInParent="true" />
</RelativeLayout>
